# predibronx

./: .gitignore  README.md  config.py  main.py  pyproject.toml
.claude/projects/-Users-victorsoto-DocumentsLocal-work-predibronx/memory/: MEMORY.md  project_predibronx.md
agent/: evaluator.py  executor.py  forecaster.py  market_selector.py  researcher.py
api/: server.py
bot/: scheduler.py  telegram_bot.py
dashboard/: index.html  package.json  tailwind.config.ts  tsconfig.json  vercel.json
dashboard/api/: [...path].js  decisions.js  health.js  logs.js  performance.js  runs.js
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/api/proxy/[...path]/: route.ts
dashboard/components/: DecisionsPanel.tsx  LogsPanel.tsx  PerformancePanel.tsx  RunsPanel.tsx  StatusBar.tsx
dashboard/src/: App.css  App.tsx  api.ts  index.css
db/: predibronx.db  schema.sql
